# pricefetch

./: Cargo.toml  Readme.md  test.csv
pricefetchcli/: Cargo.toml
pricefetchcli/src/: app.yml  main.rs
pricefetchlib/: Cargo.toml
pricefetchlib/benches/: my_benchmark.rs
pricefetchlib/src/: actors.rs  datastamp.rs  lib.rs  server.rs  utility.rs
pricefetchlib/src/actors/: datastore.rs  downloader.rs  messages.rs  mod.rs  outputwriter.rs  processor.rs
src/: actors.rs  app.yml  calc.rs  main.rs
