[package]
name = "pricefetch"
version = "0.1.0"
authors = ["Jas Bertovic <jas@bertovic.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yahoo_finance_api = {"version" = "1.0", features = ["blocking"]}
clap = {version = "2.3", features = ["yaml"]}
chrono = "0.4"
