[package]
name = "pricefetchlib"
version = "0.4.0"
authors = ["Jas Bertovic <jas@bertovic.net>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
yahoo_finance_api = {"version" = "1.0"}
chrono = "0.4"
async-std = {version = "1.9", features = ["attributes", "unstable"]}
xactor = {version = "0.7"}
async-trait = {version = "0.1"}
tide = "0.16.0"
serde = "1.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "my_benchmark"
harness = false